css: Ensure minimum spacing around view switcher in headerbar
Fixes: https://source.puri.sm/Librem5/libhandy/issues/149

--- a/src/themes/Adwaita-dark.css
+++ b/src/themes/Adwaita-dark.css
@@ -95,6 +95,8 @@ viewswitcher > button:not(:checked):not(:hover) + button:not(:checked):hover { b
 
 viewswitcher > button:not(only-child):last-child:not(:checked):hover { border-right-color: shade(#1b1b1b, 1.15); }
 
+headerbar viewswitcher { margin: 0px 30px; }
+
 headerbar viewswitcher > button:not(:checked):hover:not(:backdrop) { background-image: linear-gradient(to top, shade(alpha(#353535, 0.7), 0.96) 2px, alpha(#353535, 0.7)); }
 
 headerbar viewswitcher > button:not(only-child):first-child:not(:checked):hover { border-left-color: #1b1b1b; }
