--- a/src/themes/Adwaita.css
+++ b/src/themes/Adwaita.css
@@ -95,6 +95,8 @@ viewswitcher > button:not(:checked):not(:hover) + button:not(:checked):hover { b
 
 viewswitcher > button:not(only-child):last-child:not(:checked):hover { border-right-color: shade(#cdc7c2, 1.15); }
 
+headerbar viewswitcher { margin: 0px 30px; }
+
 headerbar viewswitcher > button:not(:checked):hover:not(:backdrop) { background-image: linear-gradient(to top, shade(alpha(#f6f5f4, 0.7), 0.96) 2px, alpha(#f6f5f4, 0.7)); }
 
 headerbar viewswitcher > button:not(only-child):first-child:not(:checked):hover { border-left-color: #cdc7c2; }
